# RTDB

./: CMakeLists.txt  findings.txt  naming_convention.txt
include/: rtdb.h  rtdb_types.h  rtdb_utils.h  rtdb_vars.h  someModule.h  system_CRC.h
src/: main.cpp  rtdb.cpp  someModule.cpp  system_CRC.cpp
unit_tests/: test_types.hpp
unit_tests/framework/: test_context.hpp
unit_tests/rtdb/configVar/: test_configVar_core.cpp  test_configVar_noInit.cpp  test_configVar_wrongDefault.cpp  test_configVar_wrongId.cpp
unit_tests/rtdb/getVar/: test_getVar_core.cpp  test_getVar_noInit.cpp  test_getVar_varNotConfigured.cpp  test_getVar_wrongCRC.cpp  test_getVar_wrongId.cpp  test_getVar_wrongIndex.cpp
unit_tests/rtdb/integrationTest/: normalUsecase.cpp
unit_tests/rtdb/setVar/: test_setVar_core.cpp  test_setVar_noInit.cpp  test_setVar_varNotConfigured.cpp  test_setVar_wrongCRC.cpp  test_setVar_wrongId.cpp  test_setVar_wrongIndex.cpp  test_setVar_wrongType.cpp  test_setVar_wrongValue.cpp
unit_tests/rtdb/setVarControl/: test_setVarControl_core.cpp  test_setVarControl_noInit.cpp  test_setVarControl_varNotConfigured.cpp  test_setVarControl_wrongCRC.cpp  test_setVarControl_wrongId.cpp
